# kraft

./: .cppcheck-suppressions  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: README.md  architecture.md  getting-started.md
docs/concepts/: multi-raft.md  pluggable-networking.md  raft-fundamentals.md
docs/features/: async-commit.md  crdt.md  leadership-transfer.md  read-index.md  snapshots.md  witnesses.md
docs/guides/: client-development.md  custom-adapters.md  custom-protocols.md  server-development.md
docs/operations/: deployment.md  monitoring.md  troubleshooting.md
docs/reference/: api.md  configuration.md  messages.md
scripts/: README.md  kraft-ci.sh  kraft-cluster.sh  kraft-test-linearizability.sh  kraft-test-live.sh  kraft-tmux.sh  test-scale-validation.sh
src/: CMakeLists.txt  asyncCommit.c  asyncCommit.h  batching.c  batching.h  bufferPool.c  bufferPool.h  chaos.c  chaos.h  crdt.c  crdt.h  kraft.c  kraft.h  kraftAdapter.h  kraftAdapterLibuv.c  kraftAdapterLibuv.h  kraftBench.c  kraftClientAPI.c  kraftClientAPI.h  kraftFuzz.c  kraftFuzz.h  kraftFuzzChaos.c  kraftFuzzChaos.h  kraftFuzzChaosRunner.c  kraftFuzzCombo.c  kraftFuzzCombo.h  kraftFuzzComboRunner.c  kraftFuzzCrdt.c  kraftFuzzCrdt.h  kraftFuzzCrdtRunner.c  kraftFuzzMulti.c  kraftFuzzMulti.h  kraftFuzzMultiRunner.c  kraftFuzzRunner.c  kraftLinearizability.c  kraftLinearizability.h  kraftLinearizabilityChecker.c  kraftLinearizabilityCluster.c  kraftLinearizabilityCluster.h  kraftLinearizabilityFailure.c  (+45 more)
src/demo/: CMakeLists.txt  demo.c  endianForceLittle.h  entryCoder.c  entryCoder.h  kraftStateMachine.c  kraftStateMachine.h  protocolBinary.c  protocolBinary.h  serverAdapterLibuv.c  serverAdapterLibuv.h
src/demo/goodbye/: netpack.c  netpack.h
src/loopy-demo/: CMakeLists.txt  README.md  loopyClientAPI.c  loopyClientAPI.h  loopyCluster.c  loopyCluster.h  loopyConnection.c  loopyConnection.h  loopyEchoTest.c  loopyHandshakeTest.c  loopyKV.c  loopyKV.h  loopyPlatform.c  loopyPlatform.h  loopyServer.c  loopyServer.h  loopySession.c  loopySession.h  loopyTimers.c  loopyTimers.h  loopyTransport.c  loopyTransport.h  main.c
